compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_function_snapshots@constrained_generics.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"fn test<T1: Numeric, T2: Numeric>() -> void {}\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "test",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [
                TypeParameter {
                    name: Identifier {
                        name: "T1",
                        location: Location(
                            8..10,
                        ),
                    },
                    constraints: [
                        Scalar(
                            ScalarType {
                                name: "Numeric",
                                location: Location(
                                    12..19,
                                ),
                            },
                        ),
                    ],
                },
                TypeParameter {
                    name: Identifier {
                        name: "T2",
                        location: Location(
                            21..23,
                        ),
                    },
                    constraints: [
                        Scalar(
                            ScalarType {
                                name: "Numeric",
                                location: Location(
                                    25..32,
                                ),
                            },
                        ),
                    ],
                },
            ],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: "void",
                        location: Location(
                            39..43,
                        ),
                    },
                ),
            ),
            block: Block {
                statements: [],
                location: Location(
                    44..46,
                ),
            },
            location: Location(
                0..46,
            ),
        },
    ),
]
