compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_function_snapshots@missing_comma.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_err(\"fn test<T1 T2>() -> void {}\")"
---
UnexpectedToken {
    source: NamedSource {
        name: "<test>",
        content: "fn test<T1 T2>() -> void {}",
    },
    range: 11..13,
    expected: ,,
    actual: identifier,
}
