compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_function_snapshots@missing_generic.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_err(\"fn test<T1,>() -> void {}\")"
---
ExpectedIdentifier {
    source: NamedSource {
        name: "<temp>",
        content: "fn test<T1,>() -> void {}",
    },
    range: 11..12,
    actual: >,
}
