compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_function_snapshots@multiple_generics.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"fn test<T1, T2>() -> void {}\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "test",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [
                TypeParameter {
                    name: Identifier {
                        name: "T1",
                        location: Location(
                            8..10,
                        ),
                    },
                    constraints: [],
                },
                TypeParameter {
                    name: Identifier {
                        name: "T2",
                        location: Location(
                            12..14,
                        ),
                    },
                    constraints: [],
                },
            ],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: Path {
                            name: Identifier {
                                name: "void",
                                location: Location(
                                    21..25,
                                ),
                            },
                            root: NamespacePath {
                                path: [],
                                location: Location(
                                    0..0,
                                ),
                            },
                            location: Location(
                                21..25,
                            ),
                        },
                    },
                ),
            ),
            block: Block {
                statements: [],
                location: Location(
                    26..28,
                ),
            },
            location: Location(
                0..28,
            ),
            documentation: None,
        },
    ),
]
