compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_function_snapshots@no_generics.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"fn test() -> void {}\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "test",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [],
                location: Location(
                    18..20,
                ),
            },
            location: Location(
                0..20,
            ),
        },
    ),
]
