compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_function_snapshots@undefined_constraint_type.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_err(\"fn test<T>() -> void where T1: Numeric {}\")"
---
ConstrainedTypeParameterNotFound {
    source: NamedSource {
        name: "<temp>",
        content: "fn test<T>() -> void where T1: Numeric {}",
    },
    range: 27..29,
    found: "T1",
    defined: [
        "T",
    ],
}
