compiler/lume_parser/src/snapshots/lume_parser__parser__tests__generic_method_snapshots@constrained_generic.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse(\"impl Test { fn test<T: Numeric>() -> void {} }\")"
---
[
    Impl(
        Implementation {
            visibility: Private(
                Private {
                    location: Location(
                        0..4,
                    ),
                },
            ),
            name: Scalar(
                ScalarType {
                    name: Path {
                        name: Identifier {
                            name: "Test",
                            location: Location(
                                5..9,
                            ),
                        },
                        root: NamespacePath {
                            path: [],
                            location: Location(
                                0..0,
                            ),
                        },
                        location: Location(
                            5..9,
                        ),
                    },
                },
            ),
            methods: [
                MethodDefinition {
                    visibility: Private(
                        Private {
                            location: Location(
                                12..14,
                            ),
                        },
                    ),
                    external: false,
                    name: Identifier {
                        name: "test",
                        location: Location(
                            15..19,
                        ),
                    },
                    parameters: [],
                    type_parameters: [
                        TypeParameter {
                            name: Identifier {
                                name: "T",
                                location: Location(
                                    20..21,
                                ),
                            },
                            constraints: [
                                Scalar(
                                    ScalarType {
                                        name: Path {
                                            name: Identifier {
                                                name: "Numeric",
                                                location: Location(
                                                    23..30,
                                                ),
                                            },
                                            root: NamespacePath {
                                                path: [],
                                                location: Location(
                                                    0..0,
                                                ),
                                            },
                                            location: Location(
                                                23..30,
                                            ),
                                        },
                                    },
                                ),
                            ],
                        },
                    ],
                    return_type: Some(
                        Scalar(
                            ScalarType {
                                name: Path {
                                    name: Identifier {
                                        name: "void",
                                        location: Location(
                                            37..41,
                                        ),
                                    },
                                    root: NamespacePath {
                                        path: [],
                                        location: Location(
                                            0..0,
                                        ),
                                    },
                                    location: Location(
                                        37..41,
                                    ),
                                },
                            },
                        ),
                    ),
                    block: Block {
                        statements: [],
                        location: Location(
                            42..44,
                        ),
                    },
                    location: Location(
                        12..44,
                    ),
                    documentation: None,
                },
            ],
            location: Location(
                0..46,
            ),
        },
    ),
]
